# ai

./: .dockerignore  .env.example  .gitignore  API_SPECIFICATION.md  Dockerfile  README.md  convert_sql.py  gemini.md  pyproject.toml
.agent/instructions/: api_design.md  architecture.md  game_element_extraction_spec.md  naming_conventions.md  project_structure.md  sse_flow_all.md  tech_stack.md
.github/workflows/: ci.yml  deploy-dev.yml  deploy-prod.yml  deploy.yml
app/: main.py
app/agents/: conversation_workflow.py  survey_nodes.py  survey_state.py  survey_workflow.py
app/api/: router.py
app/api/endpoints/: admin.py  analytics.py  embedding.py  fixed_question.py  game.py  question.py  survey_interaction.py  survey_session.py
app/core/: analytics_prompts.py  config.py  dependencies.py  exceptions.py  game_elements.py  prompts.py  question_collection.py  retry_policy.py
app/data/: data.sql
app/schemas/: analytics.py  embedding.py  fixed_question.py  game.py  question.py  survey.py
app/services/: analytics_service.py  bedrock_service.py  embedding_service.py  game_element_service.py  interaction_service.py  quality_service.py  question_service.py  session_service.py  sync_service.py  validity_service.py
tests/: conftest.py  test_analytics.py  test_analytics_integration.py  test_bedrock_connection.py  test_classification.py  test_embedding_connection.py  test_fixed_question.py  test_full_flow.py  test_interaction_simulation.py  test_workflow.py
tests/fixtures/: game_feedback_data.py
tests/utils/: seed_chromadb.py
tests/utils/chroma_viewer/: README.md  __init__.py  viewer.py
